Add complete flow of selecting image from gallery and executing segmentation

--- a/app/src/main/res/layout/fragment_selfie2segmentation.xml
+++ b/app/src/main/res/layout/fragment_selfie2segmentation.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModelXml"
             type="com.soloupis.sample.segmentationandstyletransfer.fragments.segmentation.SegmentationAndStyleTransferViewModel" />
@@ -14,13 +15,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="?android:attr/actionBarSize"
         tools:context="com.soloupis.sample.segmentationandstyletransfer.fragments.segmentation.SegmentationAndStyleTransferFragment">
 
         <ScrollView
             android:layout_width="match_parent"
-            android:padding="8dp"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="57dp"
+            android:padding="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
