--- a/app/src/main/res/layout/fragment_selfie2segmentation.xml
+++ b/app/src/main/res/layout/fragment_selfie2segmentation.xml
@@ -42,8 +42,8 @@
 
                 <ImageView
                     android:id="@+id/imageview_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="324dp"
+                    android:layout_width="224dp"
+                    android:layout_height="224dp"
                     android:layout_marginBottom="12dp"
                     android:background="@color/colorAccent"
                     android:scaleType="fitXY"
@@ -55,13 +55,12 @@
 
                 <FrameLayout
                     android:id="@+id/frame_output"
-                    android:layout_width="match_parent"
-                    android:layout_height="324dp"
+                    android:layout_width="224dp"
+                    android:layout_height="224dp"
                     android:scaleType="fitXY"
-                    app:layout_constraintBottom_toTopOf="@id/inference_info"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/imageview_input">
+                    app:layout_constraintTop_toBottomOf="@id/text">
 
                     <ProgressBar
                         android:id="@+id/progressbar"
@@ -94,7 +93,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerViewStyles"
                     android:layout_width="match_parent"
-                    android:layout_height="184dp"
+                    android:layout_height="84dp"
                     app:layout_constraintTop_toBottomOf="@id/inference_info"
                     android:layout_margin="2dp"
                     android:layout_marginTop="12dp"
@@ -102,9 +101,11 @@
                     android:padding="2dp" />
 
                 <ImageView
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     android:id="@+id/imageview_styled"
-                    android:layout_width="match_parent"
-                    android:layout_height="324dp"
+                    android:layout_width="224dp"
+                    android:layout_height="224dp"
                     android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@id/recyclerViewStyles"
                     android:scaleType="fitXY" />
