--- a/app/src/main/res/layout/fragment_selfie2segmentation.xml
+++ b/app/src/main/res/layout/fragment_selfie2segmentation.xml
@@ -100,6 +100,32 @@
                     android:background="#ccc"
                     android:padding="2dp" />
 
+                <FrameLayout
+                    app:layout_constraintTop_toBottomOf="@id/inference_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="84dp">
+
+                    <ImageView
+                        android:id="@+id/style_imageview"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="4dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/styles_square_thumb" />
+
+                    <TextView
+                        android:id="@+id/choose_style_text_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/semi_transparent"
+                        android:gravity="center"
+                        android:text="@string/choose_a_style"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@android:color/white"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+                </FrameLayout>
+
                 <ImageView
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
