--- a/app/src/main/res/layout/fragment_selfie2segmentation.xml
+++ b/app/src/main/res/layout/fragment_selfie2segmentation.xml
@@ -15,12 +15,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         tools:context="com.soloupis.sample.segmentationandstyletransfer.fragments.segmentation.SegmentationAndStyleTransferFragment">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="57dp"
+            android:layout_marginTop="54dp"
             android:padding="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,39 +29,33 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/text"
+                    android:id="@+id/textSegmentation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="6dp"
                     android:text="@string/about"
                     android:textAlignment="center"
+                    android:layout_marginTop="8dp"
+                    android:textSize="22sp"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    app:layout_constraintBottom_toTopOf="@id/imageview_input"
+                    app:layout_constraintBottom_toTopOf="@id/frame_output"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/imageview_input"
-                    android:layout_width="244dp"
-                    android:layout_height="244dp"
-                    android:layout_marginBottom="12dp"
-                    android:background="@color/colorAccent"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/ic_launcher_background"
-                    app:layout_constraintBottom_toTopOf="@id/frame_output"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/text" />
 
                 <FrameLayout
                     android:id="@+id/frame_output"
                     android:layout_width="254dp"
                     android:layout_height="254dp"
-                    android:scaleType="fitXY"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/text">
+                    app:layout_constraintTop_toBottomOf="@id/textSegmentation">
+
+                    <ImageView
+                        android:id="@+id/imageview_input"
+                        android:layout_width="244dp"
+                        android:layout_height="244dp"
+                        android:visibility="gone" />
 
                     <ProgressBar
                         android:id="@+id/progressbar"
@@ -72,38 +67,76 @@
 
                     <ImageView
                         android:id="@+id/imageview_output"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY" />
+                        android:layout_width="254dp"
+                        android:layout_height="254dp"
+                        android:scaleType="fitXY"
+                        android:visibility="gone" />
                 </FrameLayout>
 
-                <!-- TODO: Hide this for now and deal with it later with preferences -->
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constrintToggle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/inference_info">
+
+                    <ImageView
+                        android:id="@+id/imageToggleLeft"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
+                        android:src="@drawable/toggle_buttons_icon_black"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/imageToggleRight"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginStart="16dp"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
+                        android:src="@drawable/toggle_buttons_icon_grey"
+                        app:layout_constraintStart_toEndOf="@id/imageToggleLeft"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <TextView
                     android:id="@+id/inference_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginBottom="12dp"
                     android:gravity="center_horizontal"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/frame_output" />
+
+                <View
+                    android:id="@+id/viewHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginHorizontal="4dp"
+                    app:layout_constraintTop_toBottomOf="@id/constrintToggle"
+                    android:layout_marginTop="12dp"
+                    android:background="#ededed"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerViewStyles"
                     android:layout_width="match_parent"
                     android:layout_height="84dp"
-                    app:layout_constraintTop_toBottomOf="@id/inference_info"
-                    android:layout_margin="2dp"
                     android:layout_marginTop="12dp"
                     android:background="#ccc"
-                    android:padding="2dp" />
+                    android:padding="2dp"
+                    app:layout_constraintTop_toBottomOf="@id/textStyleTransfer" />
 
                 <FrameLayout
-                    app:layout_constraintTop_toBottomOf="@id/inference_info"
                     android:layout_width="match_parent"
-                    android:layout_height="84dp">
+                    android:layout_height="84dp"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@id/inference_info">
 
                     <ImageView
                         android:id="@+id/style_imageview"
@@ -126,15 +159,60 @@
                         android:textStyle="bold" />
                 </FrameLayout>
 
-                <ImageView
+                <TextView
+                    android:id="@+id/textStyleTransfer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/aguafina_script"
+                    android:text="@string/aboutSyleTransfer"
+                    android:textAlignment="center"
+                    android:textAppearance="@android:style/TextAppearance.Large"
+                    android:textSize="28sp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/viewHorizontal" />
+
+                <FrameLayout
+                    android:id="@+id/frame_output_style"
+                    android:layout_width="254dp"
+                    android:layout_height="254dp"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:id="@+id/imageview_styled"
-                    android:layout_width="244dp"
-                    android:layout_height="244dp"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/recyclerViewStyles"
-                    android:scaleType="fitXY" />
+                    app:layout_constraintTop_toBottomOf="@id/recyclerViewStyles">
+
+                    <ImageView
+                        android:id="@+id/imageview_styled"
+                        android:layout_width="244dp"
+                        android:layout_height="244dp"
+                        android:layout_marginTop="8dp"
+                        android:scaleType="fitXY"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
+
+                    <ProgressBar
+                        android:id="@+id/progressbar_style"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:indeterminateTint="@android:color/black"
+                        android:visibility="gone" />
+
+                </FrameLayout>
+
+                <TextView
+                    android:id="@+id/inference_info_style"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:gravity="center_horizontal"
+                    android:visibility="visible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/frame_output_style" />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
