--- a/app/src/main/res/layout/fragment_selfie2segmentation.xml
+++ b/app/src/main/res/layout/fragment_selfie2segmentation.xml
@@ -22,7 +22,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="54dp"
-            android:padding="8dp">
+            android:background="#fff"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -118,7 +120,6 @@
                     android:id="@+id/viewHorizontal"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:layout_marginHorizontal="4dp"
                     app:layout_constraintTop_toBottomOf="@id/constrintToggle"
                     android:layout_marginTop="12dp"
                     android:background="#ededed"/>
@@ -188,6 +189,7 @@
                         android:layout_height="244dp"
                         android:layout_marginTop="8dp"
                         android:scaleType="fitXY"
+                        android:background="#ffffff"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent" />
 
