--- a/app/src/main/res/drawable/toggle_buttons_icon_black.xml
+++ b/app/src/main/res/drawable/toggle_buttons_icon_black.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="#000000"/>
+        android:color="#fa8219"/>
 
     <size
         android:width="32dp"
