--- a/app/src/main/res/layout/fragment_selfie2segmentation.xml
+++ b/app/src/main/res/layout/fragment_selfie2segmentation.xml
@@ -127,10 +127,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerViewStyles"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="90dp"
                     android:layout_marginTop="12dp"
-                    android:background="#ccc"
-                    android:padding="2dp"
                     app:layout_constraintTop_toBottomOf="@id/textStyleTransfer" />
 
                 <FrameLayout
