--- a/app/src/main/res/drawable/toggle_buttons_icon_grey.xml
+++ b/app/src/main/res/drawable/toggle_buttons_icon_grey.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="#ededed"/>
+        android:color="@color/light_gray"/>
 
     <size
         android:width="32dp"
