--- a/app/src/main/res/layout/fragment_selfie2segmentation.xml
+++ b/app/src/main/res/layout/fragment_selfie2segmentation.xml
@@ -34,11 +34,12 @@
                     android:id="@+id/textSegmentation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/about"
-                    android:textAlignment="center"
                     android:layout_marginTop="8dp"
-                    android:textSize="22sp"
+                    android:text="@string/about"
+                    android:visibility="gone"
+                    android:textAlignment="center"
                     android:textAppearance="@android:style/TextAppearance.Medium"
+                    android:textSize="22sp"
                     app:layout_constraintBottom_toTopOf="@id/frame_output"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -46,9 +47,9 @@
 
                 <FrameLayout
                     android:id="@+id/frame_output"
-                    android:layout_width="254dp"
-                    android:layout_height="254dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/textSegmentation">
@@ -57,6 +58,7 @@
                         android:id="@+id/imageview_input"
                         android:layout_width="244dp"
                         android:layout_height="244dp"
+                        android:background="@drawable/dark_gray_border"
                         android:visibility="gone" />
 
                     <ProgressBar
@@ -71,6 +73,7 @@
                         android:id="@+id/imageview_output"
                         android:layout_width="254dp"
                         android:layout_height="254dp"
+                        android:background="@drawable/light_gray_border"
                         android:scaleType="fitXY"
                         android:visibility="gone" />
                 </FrameLayout>
@@ -79,7 +82,7 @@
                     android:id="@+id/constrintToggle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/inference_info">
@@ -120,9 +123,9 @@
                     android:id="@+id/viewHorizontal"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    app:layout_constraintTop_toBottomOf="@id/constrintToggle"
-                    android:layout_marginTop="12dp"
-                    android:background="#ededed"/>
+                    android:layout_marginTop="16dp"
+                    android:background="#ededed"
+                    app:layout_constraintTop_toBottomOf="@id/constrintToggle" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerViewStyles"
@@ -163,6 +166,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:visibility="gone"
                     android:fontFamily="@font/aguafina_script"
                     android:text="@string/aboutSyleTransfer"
                     android:textAlignment="center"
@@ -174,8 +178,8 @@
 
                 <FrameLayout
                     android:id="@+id/frame_output_style"
-                    android:layout_width="254dp"
-                    android:layout_height="254dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -185,9 +189,8 @@
                         android:id="@+id/imageview_styled"
                         android:layout_width="244dp"
                         android:layout_height="244dp"
-                        android:layout_marginTop="8dp"
+                        android:background="@drawable/light_gray_border"
                         android:scaleType="fitXY"
-                        android:background="#ffffff"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent" />
 
