--- a/app/src/main/res/drawable/light_gray_border.xml
+++ b/app/src/main/res/drawable/light_gray_border.xml
@@ -1,3 +1,6 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <stroke android:width="2dip" android:color="@color/light_gray"/>
+<?xml version="1.0" encoding="UTF-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke android:width="2dp" android:color="@color/light_gray" />
+    <padding android:left="2dp" android:top="2dp" android:right="2dp"
+        android:bottom="2dp" />
 </shape>
