--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--<color name="colorPrimary">#FFA65C</color>-->
-    <color name="colorPrimary">#fa8219</color>
+    <color name="colorPrimary">#858585</color>
     <color name="colorPrimaryDark">#dc9b00</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="icActive">#FFFFFFFF</color>
