Copy of Segmentation and style transfer...to be changed for OCR

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,5 +42,5 @@
         android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph"
-        tools:context="com.soloupis.sample.segmentationandstyletransfer.MainActivity" />
+        tools:context="com.soloupis.sample.ocr_keras.MainActivity" />
 </androidx.constraintlayout.widget.ConstraintLayout>
