Rename and rebuild things

--- a/app/src/main/res/layout/fragment_selfie2segmentation.xml
+++ b/app/src/main/res/layout/fragment_selfie2segmentation.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModelXml"
-            type="com.soloupis.sample.ocr_keras.fragments.segmentation.SegmentationAndStyleTransferViewModel" />
+            type="com.soloupis.sample.ocr_keras.fragments.segmentation.OcrViewModel" />
 
     </data>
 
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        tools:context="com.soloupis.sample.ocr_keras.fragments.segmentation.SegmentationAndStyleTransferFragment">
+        tools:context="com.soloupis.sample.ocr_keras.fragments.segmentation.OcrFragment">
 
         <ScrollView
             android:layout_width="match_parent"
