--- a/app/src/main/res/layout/fragment_ocr_fragment.xml
+++ b/app/src/main/res/layout/fragment_ocr_fragment.xml
@@ -48,7 +48,7 @@
                 <FrameLayout
                     android:id="@+id/frame_output"
                     android:layout_width="244dp"
-                    android:layout_height="244dp"
+                    android:layout_height="100dp"
                     android:layout_marginTop="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -74,39 +74,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/light_gray_border"
-                        android:visibility="gone" />
+                        android:visibility="visible" />
                 </FrameLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/constrintToggle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/inference_info">
-
-                    <ImageView
-                        android:id="@+id/imageToggleLeft"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:background="?android:attr/selectableItemBackgroundBorderless"
-                        android:src="@drawable/toggle_buttons_icon_black"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <ImageView
-                        android:id="@+id/imageToggleRight"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginStart="16dp"
-                        android:background="?android:attr/selectableItemBackgroundBorderless"
-                        android:src="@drawable/toggle_buttons_icon_grey"
-                        app:layout_constraintStart_toEndOf="@id/imageToggleLeft"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
                     android:id="@+id/inference_info"
@@ -124,41 +93,16 @@
                     android:layout_height="2dp"
                     android:layout_marginTop="16dp"
                     android:background="#ededed"
-                    app:layout_constraintTop_toBottomOf="@id/constrintToggle" />
+                    app:layout_constraintTop_toBottomOf="@id/recyclerViewStyles" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerViewStyles"
                     android:layout_width="match_parent"
                     android:layout_height="90dp"
                     android:layout_marginTop="12dp"
-                    app:layout_constraintTop_toBottomOf="@id/textStyleTransfer" />
+                    app:layout_constraintTop_toBottomOf="@id/frame_output" />
 
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="84dp"
-                    android:visibility="gone"
-                    app:layout_constraintTop_toBottomOf="@id/inference_info">
 
-                    <ImageView
-                        android:id="@+id/style_imageview"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:padding="4dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/styles_square_thumb" />
-
-                    <TextView
-                        android:id="@+id/choose_style_text_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/semi_transparent"
-                        android:gravity="center"
-                        android:text="@string/choose_a_style"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:textColor="@android:color/white"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
-                </FrameLayout>
 
                 <TextView
                     android:id="@+id/textStyleTransfer"
@@ -175,7 +119,7 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/viewHorizontal" />
 
-                <FrameLayout
+                <!--<FrameLayout
                     android:id="@+id/frame_output_style"
                     android:layout_width="244dp"
                     android:layout_height="244dp"
@@ -210,7 +154,7 @@
                         android:indeterminateTint="@color/dark_gray"
                         android:visibility="gone" />
 
-                </FrameLayout>
+                </FrameLayout>-->
 
                 <TextView
                     android:id="@+id/inference_info_style"
@@ -221,8 +165,7 @@
                     android:gravity="center_horizontal"
                     android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/frame_output_style" />
+                    app:layout_constraintStart_toStartOf="parent" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
