Clean up unnecessary fragments and methods. Refactor stuff

--- a/app/src/main/res/navigation/ocr_nav_fragment.xml
+++ b/app/src/main/res/navigation/ocr_nav_fragment.xml
@@ -9,7 +9,7 @@
     <fragment
         android:id="@+id/ocr_fragment"
         android:name="com.soloupis.sample.ocr_keras.fragments.ocr.OcrFragment"
-        android:label="Selfie2SegmentationFragment">
+        android:label="OcrFragment">
     </fragment>
 
 </navigation>
